feat(api-consumers): manage consumer keys and limits
Refs #292
